--- a/app/views/endpoints/_endpoints.html.erb
+++ b/app/views/endpoints/_endpoints.html.erb
@@ -2,7 +2,7 @@
 <%= hidden_field_tag :sort, params[:sort] %>
 <table class="pretty">
   <tr>
-    <th><%= sortable "extension" %></th>
+    <th><%= sortable "ext" %></th>
     <th><%= sortable "name" %></th>
     <th><%= sortable "url" %></th>
   </tr>
@@ -11,9 +11,8 @@
       <td><%= endpoint.extension %></td>
       <td><%= endpoint.name %></td>
       <td><%= endpoint.url %></td>
-	  <td><%= link_to "Show", endpoint %></td>
       <td><%= link_to "Edit", edit_endpoint_path(endpoint) %></td>
-      <td><%= link_to "Destroy", endpoint, :confirm => 'Are you sure?', :method => :delete %></td>
+      <td><%= link_to "Delete", endpoint, :confirm => 'Are you sure?', :method => :delete %></td>
     </tr>
   <% end %>
 </table>
