Removed pagination and added link to "New Endpoint" on the view page.
git-svn-id: http://pacdcntdp01.cable.comcast.com:8080/svn/repos/IVR/xIVR/dispatcher/trunk@40586 b450552d-2c48-7e43-a8e5-22ff54eaeea4

--- a/app/views/endpoints/show.html.erb
+++ b/app/views/endpoints/show.html.erb
@@ -16,5 +16,6 @@
 <p>
   <%= link_to "Edit", edit_endpoint_path(@endpoint) %> |
   <%= link_to "Destroy", @endpoint, :confirm => 'Are you sure?', :method => :delete %> |
-  <%= link_to "View All", endpoints_path %>
+  <%= link_to "View All", endpoints_path %> |
+  <%= link_to "New Endpoint", new_endpoint_path %>
 </p>
